      time with ./configure --enable-plugin-dir=/some/dir
    - fixed several issues in fundamental "Thread" class: set scheduling
      policy and priority on thread level, set a minimum stack size for
      thread (TODO: a reasonable value yet to be tested), bugfix: non-RT
      threads simply inherited properties of starting thread instead of
      setting their own policy and priority

  * MIDI driver:
    - dispatch bank select (MSB and LSB) messages

  * audio driver:
    - the ALSA audio output driver parameters now reflect the correct
      parameter value ranges for the respective selected sound card
      (patch by Till Wimmer, a bit fixed and extended)

  * Gigasampler format engine:
    - if a filter is used and EG2 finishes before EG1, let the voice
      die when EG2 has finished (this fixes a problem with clicks and
      voice starvation for some gigs)
    - playback is no longer disabled during instrument loading
    - all notes playing on a channel that changes its instrument keep
      playing with the old instrument until they get a note off
      command
    - EG fix: a release value of zero could cause noises or crash
    - handle MIDI coarse tuning messages (MIDI RPN #0 MSB #2 LSB)
    - EG fine tuning: when attack is zero the EG starts at a level
      above max sustain level, which means that there is a decay phase
      even if sustain is 100%
    - more EG fixes: the level could sometimes go below zero and cause
      noises or crashes
    - minor fix of EGDecay (patch by Toshi Nagata)
    - fixed compiler error when --enable-override-filter-type was
      supplied to the configure script (fixes #46)

  * Bug fixes:
    - fixed crash occurring on certain LSCP scripts (Bug 39)
    - another thread safety fix for lscp "load engine" and "set
      channel audio output device"

  * test cases:
    - updated and fixed (haven't been touched in a while)

Version 0.4.0 (24 November 2006)

  * packaging changes: